examples/Compiler/Parser/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.12 from examples/Compiler/Parser/Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parser -> Prog                              (0)
	Prog -> '{' Prop '}' Cmd '{' Prop '|' Exp '}'      (1)
	Prop -> '(' Prop ')'                               (2)
	Prop -> 'not' Prop                                 (3)
	Prop -> '(' Prop 'and' Prop ')'                    (4)
	Prop -> '(' Prop 'or' Prop ')'                     (5)
	Prop -> 'implies' Prop Prop                        (6)
	Prop -> FOLExpr                                    (7)
	FOLExpr -> Exp '==' Exp                            (8)
	FOLExpr -> Exp '<' Exp                             (9)
	FOLExpr -> Exp '<=' Exp                            (10)
	FOLExpr -> Exp '>' Exp                             (11)
	FOLExpr -> Exp '>=' Exp                            (12)
	FOLExpr -> 'forall' id '.' '(' Prop ')'            (13)
	FOLExpr -> 'exists' id '.' '(' Prop ')'            (14)
	Exp -> '(' Exp ')'                                 (15)
	Exp -> id                                          (16)
	Exp -> number                                      (17)
	Exp -> Exp '+' Exp                                 (18)
	Exp -> Exp '-' Exp                                 (19)
	Exp -> Exp '*' Exp                                 (20)
	Cmd -> id '=' Exp                                  (21)
	Cmd -> 'if' Prop 'then' Cmd 'end' 'else' Cmd 'end'   (22)
	Cmd -> 'while' string Prop 'do' Cmd 'end'          (23)
	Cmd -> Cmd ';' Cmd                                 (24)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	id             { Token _ (TIdent $$) }
	number         { Token _ (TNumber $$) }
	string         { Token _ (TString $$) }
	'+'            { Token _ TPlus }
	'-'            { Token _ TMinus }
	'*'            { Token _ TMult }
	'not'          { Token _ TNot }
	'and'          { Token _ TAnd }
	'or'           { Token _ TOr }
	'implies'      { Token _ TImp }
	'=='           { Token _ TEq }
	'>'            { Token _ TGt }
	'>='           { Token _ TGe }
	'<'            { Token _ TLt }
	'<='           { Token _ TLe }
	'exists'       { Token _ TExists }
	'forall'       { Token _ TForAll }
	'='            { Token _ TAssign }
	'if'           { Token _ TIf }
	'then'         { Token _ TThen }
	'else'         { Token _ TElse }
	'while'        { Token _ TWhile }
	'do'           { Token _ TDo }
	'end'          { Token _ TEnd }
	'{'            { Token _ TLBracket }
	'}'            { Token _ TRBracket }
	'('            { Token _ TLParen }
	')'            { Token _ TRParen }
	'|'            { Token _ TBar }
	'.'            { Token _ TDot }
	';'            { Token _ TSemicolons }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parser   rule  0
	Prog            rule  1
	Prop            rules 2, 3, 4, 5, 6, 7
	FOLExpr         rules 8, 9, 10, 11, 12, 13, 14
	Exp             rules 15, 16, 17, 18, 19, 20
	Cmd             rules 21, 22, 23, 24

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'{'            shift, and enter state 2

	Prog           goto state 3

State 1


	'{'            shift, and enter state 2


State 2

	Prog -> '{' . Prop '}' Cmd '{' Prop '|' Exp '}'     (rule 1)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 4
	FOLExpr        goto state 5
	Exp            goto state 6

State 3

	%start_parser -> Prog .                             (rule 0)

	%eof           accept


State 4

	Prog -> '{' Prop . '}' Cmd '{' Prop '|' Exp '}'     (rule 1)

	'}'            shift, and enter state 28


State 5

	Prop -> FOLExpr .                                   (rule 7)

	id             reduce using rule 7
	number         reduce using rule 7
	'not'          reduce using rule 7
	'and'          reduce using rule 7
	'or'           reduce using rule 7
	'implies'      reduce using rule 7
	'exists'       reduce using rule 7
	'forall'       reduce using rule 7
	'then'         reduce using rule 7
	'do'           reduce using rule 7
	'}'            reduce using rule 7
	'('            reduce using rule 7
	')'            reduce using rule 7
	'|'            reduce using rule 7


State 6

	FOLExpr -> Exp . '==' Exp                           (rule 8)
	FOLExpr -> Exp . '<' Exp                            (rule 9)
	FOLExpr -> Exp . '<=' Exp                           (rule 10)
	FOLExpr -> Exp . '>' Exp                            (rule 11)
	FOLExpr -> Exp . '>=' Exp                           (rule 12)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'=='           shift, and enter state 23
	'>'            shift, and enter state 24
	'>='           shift, and enter state 25
	'<'            shift, and enter state 26
	'<='           shift, and enter state 27


State 7

	Exp -> id .                                         (rule 16)

	id             reduce using rule 16
	number         reduce using rule 16
	'+'            reduce using rule 16
	'-'            reduce using rule 16
	'*'            reduce using rule 16
	'not'          reduce using rule 16
	'and'          reduce using rule 16
	'or'           reduce using rule 16
	'implies'      reduce using rule 16
	'=='           reduce using rule 16
	'>'            reduce using rule 16
	'>='           reduce using rule 16
	'<'            reduce using rule 16
	'<='           reduce using rule 16
	'exists'       reduce using rule 16
	'forall'       reduce using rule 16
	'then'         reduce using rule 16
	'do'           reduce using rule 16
	'end'          reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	'('            reduce using rule 16
	')'            reduce using rule 16
	'|'            reduce using rule 16
	';'            reduce using rule 16


State 8

	Exp -> number .                                     (rule 17)

	id             reduce using rule 17
	number         reduce using rule 17
	'+'            reduce using rule 17
	'-'            reduce using rule 17
	'*'            reduce using rule 17
	'not'          reduce using rule 17
	'and'          reduce using rule 17
	'or'           reduce using rule 17
	'implies'      reduce using rule 17
	'=='           reduce using rule 17
	'>'            reduce using rule 17
	'>='           reduce using rule 17
	'<'            reduce using rule 17
	'<='           reduce using rule 17
	'exists'       reduce using rule 17
	'forall'       reduce using rule 17
	'then'         reduce using rule 17
	'do'           reduce using rule 17
	'end'          reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	'('            reduce using rule 17
	')'            reduce using rule 17
	'|'            reduce using rule 17
	';'            reduce using rule 17


State 9

	Prop -> 'not' . Prop                                (rule 3)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 19
	FOLExpr        goto state 5
	Exp            goto state 6

State 10

	Prop -> 'implies' . Prop Prop                       (rule 6)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 18
	FOLExpr        goto state 5
	Exp            goto state 6

State 11

	FOLExpr -> 'exists' . id '.' '(' Prop ')'           (rule 14)

	id             shift, and enter state 17


State 12

	FOLExpr -> 'forall' . id '.' '(' Prop ')'           (rule 13)

	id             shift, and enter state 16


State 13

	Prop -> '(' . Prop ')'                              (rule 2)
	Prop -> '(' . Prop 'and' Prop ')'                   (rule 4)
	Prop -> '(' . Prop 'or' Prop ')'                    (rule 5)
	Exp -> '(' . Exp ')'                                (rule 15)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 14
	FOLExpr        goto state 5
	Exp            goto state 15

State 14

	Prop -> '(' Prop . ')'                              (rule 2)
	Prop -> '(' Prop . 'and' Prop ')'                   (rule 4)
	Prop -> '(' Prop . 'or' Prop ')'                    (rule 5)

	'and'          shift, and enter state 46
	'or'           shift, and enter state 47
	')'            shift, and enter state 48


State 15

	FOLExpr -> Exp . '==' Exp                           (rule 8)
	FOLExpr -> Exp . '<' Exp                            (rule 9)
	FOLExpr -> Exp . '<=' Exp                           (rule 10)
	FOLExpr -> Exp . '>' Exp                            (rule 11)
	FOLExpr -> Exp . '>=' Exp                           (rule 12)
	Exp -> '(' Exp . ')'                                (rule 15)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'=='           shift, and enter state 23
	'>'            shift, and enter state 24
	'>='           shift, and enter state 25
	'<'            shift, and enter state 26
	'<='           shift, and enter state 27
	')'            shift, and enter state 45


State 16

	FOLExpr -> 'forall' id . '.' '(' Prop ')'           (rule 13)

	'.'            shift, and enter state 44


State 17

	FOLExpr -> 'exists' id . '.' '(' Prop ')'           (rule 14)

	'.'            shift, and enter state 43


State 18

	Prop -> 'implies' Prop . Prop                       (rule 6)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 42
	FOLExpr        goto state 5
	Exp            goto state 6

State 19

	Prop -> 'not' Prop .                                (rule 3)

	id             reduce using rule 3
	number         reduce using rule 3
	'not'          reduce using rule 3
	'and'          reduce using rule 3
	'or'           reduce using rule 3
	'implies'      reduce using rule 3
	'exists'       reduce using rule 3
	'forall'       reduce using rule 3
	'then'         reduce using rule 3
	'do'           reduce using rule 3
	'}'            reduce using rule 3
	'('            reduce using rule 3
	')'            reduce using rule 3
	'|'            reduce using rule 3


State 20

	Exp -> Exp '+' . Exp                                (rule 18)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 41

State 21

	Exp -> Exp '-' . Exp                                (rule 19)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 40

State 22

	Exp -> Exp '*' . Exp                                (rule 20)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 39

State 23

	FOLExpr -> Exp '==' . Exp                           (rule 8)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 38

State 24

	FOLExpr -> Exp '>' . Exp                            (rule 11)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 37

State 25

	FOLExpr -> Exp '>=' . Exp                           (rule 12)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 36

State 26

	FOLExpr -> Exp '<' . Exp                            (rule 9)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 35

State 27

	FOLExpr -> Exp '<=' . Exp                           (rule 10)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 33

State 28

	Prog -> '{' Prop '}' . Cmd '{' Prop '|' Exp '}'     (rule 1)

	id             shift, and enter state 30
	'if'           shift, and enter state 31
	'while'        shift, and enter state 32

	Cmd            goto state 29

State 29

	Prog -> '{' Prop '}' Cmd . '{' Prop '|' Exp '}'     (rule 1)
	Cmd -> Cmd . ';' Cmd                                (rule 24)

	'{'            shift, and enter state 57
	';'            shift, and enter state 58


State 30

	Cmd -> id . '=' Exp                                 (rule 21)

	'='            shift, and enter state 56


State 31

	Cmd -> 'if' . Prop 'then' Cmd 'end' 'else' Cmd 'end'    (rule 22)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 55
	FOLExpr        goto state 5
	Exp            goto state 6

State 32

	Cmd -> 'while' . string Prop 'do' Cmd 'end'         (rule 23)

	string         shift, and enter state 54


State 33

	FOLExpr -> Exp '<=' Exp .                           (rule 10)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 10
	number         reduce using rule 10
	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'not'          reduce using rule 10
	'and'          reduce using rule 10
	'or'           reduce using rule 10
	'implies'      reduce using rule 10
	'exists'       reduce using rule 10
	'forall'       reduce using rule 10
	'then'         reduce using rule 10
	'do'           reduce using rule 10
	'}'            reduce using rule 10
	'('            reduce using rule 10
	')'            reduce using rule 10
	'|'            reduce using rule 10


State 34

	Exp -> '(' . Exp ')'                                (rule 15)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 53

State 35

	FOLExpr -> Exp '<' Exp .                            (rule 9)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 9
	number         reduce using rule 9
	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'not'          reduce using rule 9
	'and'          reduce using rule 9
	'or'           reduce using rule 9
	'implies'      reduce using rule 9
	'exists'       reduce using rule 9
	'forall'       reduce using rule 9
	'then'         reduce using rule 9
	'do'           reduce using rule 9
	'}'            reduce using rule 9
	'('            reduce using rule 9
	')'            reduce using rule 9
	'|'            reduce using rule 9


State 36

	FOLExpr -> Exp '>=' Exp .                           (rule 12)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 12
	number         reduce using rule 12
	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'not'          reduce using rule 12
	'and'          reduce using rule 12
	'or'           reduce using rule 12
	'implies'      reduce using rule 12
	'exists'       reduce using rule 12
	'forall'       reduce using rule 12
	'then'         reduce using rule 12
	'do'           reduce using rule 12
	'}'            reduce using rule 12
	'('            reduce using rule 12
	')'            reduce using rule 12
	'|'            reduce using rule 12


State 37

	FOLExpr -> Exp '>' Exp .                            (rule 11)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 11
	number         reduce using rule 11
	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'not'          reduce using rule 11
	'and'          reduce using rule 11
	'or'           reduce using rule 11
	'implies'      reduce using rule 11
	'exists'       reduce using rule 11
	'forall'       reduce using rule 11
	'then'         reduce using rule 11
	'do'           reduce using rule 11
	'}'            reduce using rule 11
	'('            reduce using rule 11
	')'            reduce using rule 11
	'|'            reduce using rule 11


State 38

	FOLExpr -> Exp '==' Exp .                           (rule 8)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 8
	number         reduce using rule 8
	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'not'          reduce using rule 8
	'and'          reduce using rule 8
	'or'           reduce using rule 8
	'implies'      reduce using rule 8
	'exists'       reduce using rule 8
	'forall'       reduce using rule 8
	'then'         reduce using rule 8
	'do'           reduce using rule 8
	'}'            reduce using rule 8
	'('            reduce using rule 8
	')'            reduce using rule 8
	'|'            reduce using rule 8


State 39

	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)
	Exp -> Exp '*' Exp .                                (rule 20)

	id             reduce using rule 20
	number         reduce using rule 20
	'+'            reduce using rule 20
	'-'            reduce using rule 20
	'*'            reduce using rule 20
	'not'          reduce using rule 20
	'and'          reduce using rule 20
	'or'           reduce using rule 20
	'implies'      reduce using rule 20
	'=='           reduce using rule 20
	'>'            reduce using rule 20
	'>='           reduce using rule 20
	'<'            reduce using rule 20
	'<='           reduce using rule 20
	'exists'       reduce using rule 20
	'forall'       reduce using rule 20
	'then'         reduce using rule 20
	'do'           reduce using rule 20
	'end'          reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	'('            reduce using rule 20
	')'            reduce using rule 20
	'|'            reduce using rule 20
	';'            reduce using rule 20


State 40

	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp '-' Exp .                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 19
	number         reduce using rule 19
	'+'            reduce using rule 19
	'-'            reduce using rule 19
	'*'            shift, and enter state 22
	'not'          reduce using rule 19
	'and'          reduce using rule 19
	'or'           reduce using rule 19
	'implies'      reduce using rule 19
	'=='           reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	'<'            reduce using rule 19
	'<='           reduce using rule 19
	'exists'       reduce using rule 19
	'forall'       reduce using rule 19
	'then'         reduce using rule 19
	'do'           reduce using rule 19
	'end'          reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	'('            reduce using rule 19
	')'            reduce using rule 19
	'|'            reduce using rule 19
	';'            reduce using rule 19


State 41

	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp '+' Exp .                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	id             reduce using rule 18
	number         reduce using rule 18
	'+'            reduce using rule 18
	'-'            reduce using rule 18
	'*'            shift, and enter state 22
	'not'          reduce using rule 18
	'and'          reduce using rule 18
	'or'           reduce using rule 18
	'implies'      reduce using rule 18
	'=='           reduce using rule 18
	'>'            reduce using rule 18
	'>='           reduce using rule 18
	'<'            reduce using rule 18
	'<='           reduce using rule 18
	'exists'       reduce using rule 18
	'forall'       reduce using rule 18
	'then'         reduce using rule 18
	'do'           reduce using rule 18
	'end'          reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	'('            reduce using rule 18
	')'            reduce using rule 18
	'|'            reduce using rule 18
	';'            reduce using rule 18


State 42

	Prop -> 'implies' Prop Prop .                       (rule 6)

	id             reduce using rule 6
	number         reduce using rule 6
	'not'          reduce using rule 6
	'and'          reduce using rule 6
	'or'           reduce using rule 6
	'implies'      reduce using rule 6
	'exists'       reduce using rule 6
	'forall'       reduce using rule 6
	'then'         reduce using rule 6
	'do'           reduce using rule 6
	'}'            reduce using rule 6
	'('            reduce using rule 6
	')'            reduce using rule 6
	'|'            reduce using rule 6


State 43

	FOLExpr -> 'exists' id '.' . '(' Prop ')'           (rule 14)

	'('            shift, and enter state 52


State 44

	FOLExpr -> 'forall' id '.' . '(' Prop ')'           (rule 13)

	'('            shift, and enter state 51


State 45

	Exp -> '(' Exp ')' .                                (rule 15)

	id             reduce using rule 15
	number         reduce using rule 15
	'+'            reduce using rule 15
	'-'            reduce using rule 15
	'*'            reduce using rule 15
	'not'          reduce using rule 15
	'and'          reduce using rule 15
	'or'           reduce using rule 15
	'implies'      reduce using rule 15
	'=='           reduce using rule 15
	'>'            reduce using rule 15
	'>='           reduce using rule 15
	'<'            reduce using rule 15
	'<='           reduce using rule 15
	'exists'       reduce using rule 15
	'forall'       reduce using rule 15
	'then'         reduce using rule 15
	'do'           reduce using rule 15
	'end'          reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	'('            reduce using rule 15
	')'            reduce using rule 15
	'|'            reduce using rule 15
	';'            reduce using rule 15


State 46

	Prop -> '(' Prop 'and' . Prop ')'                   (rule 4)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 50
	FOLExpr        goto state 5
	Exp            goto state 6

State 47

	Prop -> '(' Prop 'or' . Prop ')'                    (rule 5)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 49
	FOLExpr        goto state 5
	Exp            goto state 6

State 48

	Prop -> '(' Prop ')' .                              (rule 2)

	id             reduce using rule 2
	number         reduce using rule 2
	'not'          reduce using rule 2
	'and'          reduce using rule 2
	'or'           reduce using rule 2
	'implies'      reduce using rule 2
	'exists'       reduce using rule 2
	'forall'       reduce using rule 2
	'then'         reduce using rule 2
	'do'           reduce using rule 2
	'}'            reduce using rule 2
	'('            reduce using rule 2
	')'            reduce using rule 2
	'|'            reduce using rule 2


State 49

	Prop -> '(' Prop 'or' Prop . ')'                    (rule 5)

	')'            shift, and enter state 67


State 50

	Prop -> '(' Prop 'and' Prop . ')'                   (rule 4)

	')'            shift, and enter state 66


State 51

	FOLExpr -> 'forall' id '.' '(' . Prop ')'           (rule 13)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 65
	FOLExpr        goto state 5
	Exp            goto state 6

State 52

	FOLExpr -> 'exists' id '.' '(' . Prop ')'           (rule 14)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 64
	FOLExpr        goto state 5
	Exp            goto state 6

State 53

	Exp -> '(' Exp . ')'                                (rule 15)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	')'            shift, and enter state 45


State 54

	Cmd -> 'while' string . Prop 'do' Cmd 'end'         (rule 23)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 63
	FOLExpr        goto state 5
	Exp            goto state 6

State 55

	Cmd -> 'if' Prop . 'then' Cmd 'end' 'else' Cmd 'end'    (rule 22)

	'then'         shift, and enter state 62


State 56

	Cmd -> id '=' . Exp                                 (rule 21)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 61

State 57

	Prog -> '{' Prop '}' Cmd '{' . Prop '|' Exp '}'     (rule 1)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'not'          shift, and enter state 9
	'implies'      shift, and enter state 10
	'exists'       shift, and enter state 11
	'forall'       shift, and enter state 12
	'('            shift, and enter state 13

	Prop           goto state 60
	FOLExpr        goto state 5
	Exp            goto state 6

State 58

	Cmd -> Cmd ';' . Cmd                                (rule 24)

	id             shift, and enter state 30
	'if'           shift, and enter state 31
	'while'        shift, and enter state 32

	Cmd            goto state 59

State 59

	Cmd -> Cmd . ';' Cmd                                (rule 24)
	Cmd -> Cmd ';' Cmd .                                (rule 24)

	'end'          reduce using rule 24
	'{'            reduce using rule 24
	';'            reduce using rule 24


State 60

	Prog -> '{' Prop '}' Cmd '{' Prop . '|' Exp '}'     (rule 1)

	'|'            shift, and enter state 72


State 61

	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)
	Cmd -> id '=' Exp .                                 (rule 21)

	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'end'          reduce using rule 21
	'{'            reduce using rule 21
	';'            reduce using rule 21


State 62

	Cmd -> 'if' Prop 'then' . Cmd 'end' 'else' Cmd 'end'    (rule 22)

	id             shift, and enter state 30
	'if'           shift, and enter state 31
	'while'        shift, and enter state 32

	Cmd            goto state 71

State 63

	Cmd -> 'while' string Prop . 'do' Cmd 'end'         (rule 23)

	'do'           shift, and enter state 70


State 64

	FOLExpr -> 'exists' id '.' '(' Prop . ')'           (rule 14)

	')'            shift, and enter state 69


State 65

	FOLExpr -> 'forall' id '.' '(' Prop . ')'           (rule 13)

	')'            shift, and enter state 68


State 66

	Prop -> '(' Prop 'and' Prop ')' .                   (rule 4)

	id             reduce using rule 4
	number         reduce using rule 4
	'not'          reduce using rule 4
	'and'          reduce using rule 4
	'or'           reduce using rule 4
	'implies'      reduce using rule 4
	'exists'       reduce using rule 4
	'forall'       reduce using rule 4
	'then'         reduce using rule 4
	'do'           reduce using rule 4
	'}'            reduce using rule 4
	'('            reduce using rule 4
	')'            reduce using rule 4
	'|'            reduce using rule 4


State 67

	Prop -> '(' Prop 'or' Prop ')' .                    (rule 5)

	id             reduce using rule 5
	number         reduce using rule 5
	'not'          reduce using rule 5
	'and'          reduce using rule 5
	'or'           reduce using rule 5
	'implies'      reduce using rule 5
	'exists'       reduce using rule 5
	'forall'       reduce using rule 5
	'then'         reduce using rule 5
	'do'           reduce using rule 5
	'}'            reduce using rule 5
	'('            reduce using rule 5
	')'            reduce using rule 5
	'|'            reduce using rule 5


State 68

	FOLExpr -> 'forall' id '.' '(' Prop ')' .           (rule 13)

	id             reduce using rule 13
	number         reduce using rule 13
	'not'          reduce using rule 13
	'and'          reduce using rule 13
	'or'           reduce using rule 13
	'implies'      reduce using rule 13
	'exists'       reduce using rule 13
	'forall'       reduce using rule 13
	'then'         reduce using rule 13
	'do'           reduce using rule 13
	'}'            reduce using rule 13
	'('            reduce using rule 13
	')'            reduce using rule 13
	'|'            reduce using rule 13


State 69

	FOLExpr -> 'exists' id '.' '(' Prop ')' .           (rule 14)

	id             reduce using rule 14
	number         reduce using rule 14
	'not'          reduce using rule 14
	'and'          reduce using rule 14
	'or'           reduce using rule 14
	'implies'      reduce using rule 14
	'exists'       reduce using rule 14
	'forall'       reduce using rule 14
	'then'         reduce using rule 14
	'do'           reduce using rule 14
	'}'            reduce using rule 14
	'('            reduce using rule 14
	')'            reduce using rule 14
	'|'            reduce using rule 14


State 70

	Cmd -> 'while' string Prop 'do' . Cmd 'end'         (rule 23)

	id             shift, and enter state 30
	'if'           shift, and enter state 31
	'while'        shift, and enter state 32

	Cmd            goto state 75

State 71

	Cmd -> 'if' Prop 'then' Cmd . 'end' 'else' Cmd 'end'    (rule 22)
	Cmd -> Cmd . ';' Cmd                                (rule 24)

	'end'          shift, and enter state 74
	';'            shift, and enter state 58


State 72

	Prog -> '{' Prop '}' Cmd '{' Prop '|' . Exp '}'     (rule 1)

	id             shift, and enter state 7
	number         shift, and enter state 8
	'('            shift, and enter state 34

	Exp            goto state 73

State 73

	Prog -> '{' Prop '}' Cmd '{' Prop '|' Exp . '}'     (rule 1)
	Exp -> Exp . '+' Exp                                (rule 18)
	Exp -> Exp . '-' Exp                                (rule 19)
	Exp -> Exp . '*' Exp                                (rule 20)

	'+'            shift, and enter state 20
	'-'            shift, and enter state 21
	'*'            shift, and enter state 22
	'}'            shift, and enter state 78


State 74

	Cmd -> 'if' Prop 'then' Cmd 'end' . 'else' Cmd 'end'    (rule 22)

	'else'         shift, and enter state 77


State 75

	Cmd -> 'while' string Prop 'do' Cmd . 'end'         (rule 23)
	Cmd -> Cmd . ';' Cmd                                (rule 24)

	'end'          shift, and enter state 76
	';'            shift, and enter state 58


State 76

	Cmd -> 'while' string Prop 'do' Cmd 'end' .         (rule 23)

	'end'          reduce using rule 23
	'{'            reduce using rule 23
	';'            reduce using rule 23


State 77

	Cmd -> 'if' Prop 'then' Cmd 'end' 'else' . Cmd 'end'    (rule 22)

	id             shift, and enter state 30
	'if'           shift, and enter state 31
	'while'        shift, and enter state 32

	Cmd            goto state 79

State 78

	Prog -> '{' Prop '}' Cmd '{' Prop '|' Exp '}' .     (rule 1)

	%eof           reduce using rule 1


State 79

	Cmd -> 'if' Prop 'then' Cmd 'end' 'else' Cmd . 'end'    (rule 22)
	Cmd -> Cmd . ';' Cmd                                (rule 24)

	'end'          shift, and enter state 80
	';'            shift, and enter state 58


State 80

	Cmd -> 'if' Prop 'then' Cmd 'end' 'else' Cmd 'end' .    (rule 22)

	'end'          reduce using rule 22
	'{'            reduce using rule 22
	';'            reduce using rule 22


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 25
Number of terminals: 31
Number of non-terminals: 6
Number of states: 81
